# Student-grading-task2

./: CMakeLists.txt  Readme.txt
