cmake_minimum_required(VERSION 3.10)
project(StudentGrading)
set(CMAKE_CXX_STANDARD 17)
include_directories(include)
add_library(core STATIC src/Person.cpp src/StudentProcessor.cpp)
add_executable(generator src/generator.cpp)
add_executable(main_vector src/main_vector.cpp)
add_executable(main_list src/main_list.cpp)
add_executable(main_deque src/main_deque.cpp)
target_link_libraries(main_vector core)
target_link_libraries(main_list core)
target_link_libraries(main_deque core)
